source/assets/stylesheets/_components.speaker.scss
/* =Speaker
===================================================== */

// Speaker
//
// Speakers detail
//
// Markup: speaker.html
//
// Style guide: 6.speaker

.wcb_speaker {

  margin-bottom: $unit-m;
  padding-bottom: rem(64);

  background: $image-divider no-repeat 50% 100%;

  .entry-title {

    margin-bottom: $unit-xs;

  }

  .entry-content {
    @include container-center();

    padding-left: $container-unit-small;
    padding-right: $container-unit-small;


    p {

      margin-bottom: $unit-xs;

      &:last-child {

        margin-bottom: 0;

      }

    }

  }

  .speaker-avatar {
    float: left;
    width: rem(100);
    margin: rem(8) rem(16) rem(8) 0;

    img {
      -webkit-border-radius: 50%;
      -moz-border-radius: 50%;
      border-radius: 50%;
      border:4px solid $color-brand-primary;
      margin: 0;

    }

    @include breakpoint(small) {
      margin-right: 0;
      margin-left: 0 - rem(120);

    }

  }

  .speaker-sessions {

    margin-top: $unit-m;

    font-size: ms(0);
    letter-spacing: .05em;
    text-transform: uppercase;

  }

  #speaker-session-names {

    @include list-reset();

  }

}

